...

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/identifier" />

                <TextView
                    android:id="@+id/tvIdentifierAccountStepReview"
                    style="@style/TextViewReview.Input"
                    android:textColor="@color/black" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/type" />

                <TextView
                    android:id="@+id/tvTypeAccountStepReview"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/tvNameAccountStepReview"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <LinearLayout
                    android:id="@+id/llHeadTwoAccountsReview"
...
                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/holders" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHoldersAccountStepReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_padding_12dp"
                    android:layout_marginBottom="@dimen/layout_padding_12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
...
                <TextView
                    style="@style/TextViewReview.Head"
                    android:paddingTop="@dimen/layout_padding_8dp"
                    android:text="@string/signature_authorities" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvSignatureAuthoritiesAccountStepReview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/layout_padding_12dp"
                    android:layout_marginBottom="@dimen/layout_padding_12dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="2"
...

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/reference_account" />

                <TextView
                    android:id="@+id/tvRefAccountStepReview"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/ledger_account" />

                <TextView
                    android:id="@+id/tvLedgerAccountStepReview"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

                <TextView
                    style="@style/TextViewReview.Head"
                    android:text="@string/alternate_account_number" />

                <TextView
                    android:id="@+id/tvAltAccountNoAccountStepReview"
                    style="@style/TextViewReview.Input" />

                <View style="@style/TextViewUnderline.Grey" />

            </LinearLayout>

...
