<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilIdentifierAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etIdentifierAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/identifier"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>


                <Spinner
                    android:id="@+id/spinnerTypeAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/account_types"
                    android:padding="@dimen/layout_padding_12dp"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilNameAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                    <EditText
                        android:id="@+id/etNameAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilAltAccountNumAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etAltAccountNumAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/alternate_account_number"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilLedgerAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etLedgerAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/ledger_account"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilRefAccountNumAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etRefAccountNumAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/reference_account_number"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilBalanceAccountDetailsStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etBalanceAccountDetailsStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/balance"
                        android:inputType="numberDecimal" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
