<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/default_padding">

                <LinearLayout
                    android:id="@+id/llHolderAccountStep"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:animateLayoutChanges="true"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_weight="3"
                            android:text="@string/holders"
                            android:textColor="@color/gray_dark" />

                        <ImageButton
                            android:id="@+id/ivAddHolder"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            app:srcCompat="@drawable/ic_add_black_24dp" />


                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvAddedHolder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="@dimen/layout_padding_16dp"
                        android:text="@string/no_account_holder_added"
                        android:visibility="visible" />

                    <LinearLayout
                        android:id="@+id/llAddHolderAccountStep"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/layout_padding_12dp"
                        android:background="@drawable/border"
                        android:orientation="vertical"
                        android:padding="@dimen/layout_padding_16dp"
                        android:visibility="gone">

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <EditText
                                android:id="@+id/etNewHolder"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="@string/name" />

                        </com.google.android.material.textfield.TextInputLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/layout_padding_16dp"
                            android:gravity="right">

                            <Button
                                android:id="@+id/btnCancelAddHolder"
                                style="@style/Widget.MaterialComponents.Button.TextButton"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cancel"
                                android:textSize="@dimen/text_size_14sp" />

                            <Button
                                android:id="@+id/btnAddHolder"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/add" />

                        </LinearLayout>

                    </LinearLayout>


                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvHolderName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clipToPadding="false"
                    android:paddingTop="@dimen/layout_padding_16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="4"
                    tools:listitem="@layout/item_name_list" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>